# limine-terminal

./: .gitignore  .gitmodules  LICENSE  README.md  meson.build
src/: image.c  stb_image.c  term.c
src/limine_terminal/: funcs.h  image.h  stb_image.h  term.h
